meta/k8s/backend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: serving-backend-internal
  namespace: swiss-ai
spec:
  ports:
  - name: serving-http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: serving-backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serving-backend
  namespace: swiss-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: serving-backend
  minReadySeconds: 25
  template:
    metadata:
      labels:
        app: serving-backend
    spec:
      containers:
      - name: serving-backend
        image: ghcr.io/xiaozheyao/serving-backend:dev
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        resources:
          requests:
            cpu: 2000m
            memory: 4Gi
          limits:
            cpu: 4000m
            memory: 16Gi
      restartPolicy: Always
