meta/k8s/webui.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui-service
spec:
  type: NodePort  # Use LoadBalancer if you're on a cloud that supports it
  selector:
    app: open-webui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
