meta/k8s/webui.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: open-webui
  namespace: swiss-ai
spec:
  ingressClassName: nginx
  rules:
  - host: chat.swissai.cscs.ch
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: open-webui-service
            port:
              number: 8080
  tls:
  - hosts:
    - chat.swissai.cscs.ch
    secretName: webui-cert
